updated build and test dependencies